[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rnds-py"
version = "0.0.1"
authors = [
  { name="Rafael Reis", email="rafareisbr@egresso.ufg.br" },
]
description = "Biblioteca para facilitar o acesso à RNDS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"RNDS" = "https://rnds-guia.prod.saude.gov.br/"
"Bug Tracker" = "https://github.com/kyriosdata/rnds/issues"